updates for github

--- a/index.html
+++ b/index.html
@@ -90,13 +90,11 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:name@email.com">saumya.jetley@inria.fr</a>
           </div>
           <p class="lead mb-5">
-            I am a postdoc under Michele Sebag at the TAU Team, INRIA-Paris Saclay. I work on causal inference in the context of French job market, alongside the industrial partner QAPA, and on privacy-preserving predictive analysis for French covid data. I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a> at Oxford University.
+            I am a postdoc with Michele Sebag at the <a href="https://tao.lri.fr/tiki-index.php">TAU Team, INRIA-Paris Saclay</a>. I work on causal inference in the context of French job market, alongside the industrial partner <a href="https://www.qapa.fr/">QAPA</a>, and on privacy-preserving predictive analysis for French covid data. I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a> at Oxford University.
 			
 			<br/><br/>
-			My research work has been variously funded by the Government of India, European research council, US department of defense and Five AI (autonomous driving startup). I am an IET Postgraduate Research award holder, have <a href=https://scholar.google.com/citations?user=jdWaKDIAAAAJ&hl=en style="text-decoration:none">published several papers in top-tier CV and ML conferences</a>, was selected for the FDL NASA programme 2019, and was an invited panel member for FDL Europe Big Think 2020. I have presented my research at various international conferences (NeurIPS, CVPR, ICLR) and workshops (Deep Learning Edinburg, ML Indaba), and am grateful to have been an invited speaker at institutes such AI Wadhwani institute, ISI Kolkata, IIT Kharagpur, INRIA Paris Central, INRIA Paris Saclay. 
+			My research work has been variously funded by the Government of India, European research council, US department of defense and Five AI (autonomous driving startup). I am an IET Postgraduate Research award holder for 2019, have <a href=https://scholar.google.com/citations?user=jdWaKDIAAAAJ&hl=en style="text-decoration:none">published several papers in top-tier CV and ML conferences</a>, was selected for the FDL NASA programme 2019, and was an invited panel member at FDL Europe Big Think 2020. I have presented my research at various international conferences (NeurIPS, CVPR, ICLR) and workshops (Edinburgh Deep Learning workshop, ML Indaba), and am grateful to have been an invited speaker at institutes such as AI Wadhwani, ISI Kolkata, IIT Kharagpur, INRIA Paris Central, INRIA Paris Saclay. 
 			
-			<br/><br/>
-			As a member of several initiatives to encourage STEM education, I have frequently conducted coding sessions and educational talks for school students at Science festivals and organised learning events for families and adults in Science museums. Over the years, I have enjoyed pursuing scientific ideas for impact design and value discovery for different communities and continue to do so.
 </p>
 
           <div class="social-icons">
@@ -123,36 +121,32 @@
         <div class="my-auto">
           <h2 class="mb-5">News</h2>
           <p class="lead mb-5">
-03/19: I gave a <a href="./presentations/inria-paris-saclay_03-19_SaumyaJetley">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAO team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
+
+10/19: I am joining <a href="https://tao.lri.fr/tiki-index.php"> TAU Team</a> as a postdoc on causal learning and inference. 
+<a href="http://bayes.cs.ucla.edu/WHY/">*Book of Why*</a> has opened new doorways!
+<br/>
+
+08/19: I have spent this summer visiting <a href='https://www.isical.ac.in/~ecsu/?q=node/89'>ISI, Kolkata</a> and IIT, Kharagpur as an invited guest.
+<br/>
+
+06/19: I gave an invited talk at Willow team - INRIA-Paris Central.
+<br/>	
+04/19: I successfully defended my thesis to an examining panel of <a href="https://en.wikipedia.org/wiki/Andrew_Zisserman">Prof. Andrew Zisserman</a> and <a href="https://homes.esat.kuleuven.be/~tuytelaa/">Prof. Tinne Tuytelaars</a>.	
+<br/>
+03/19: I was invited for a <a href="./presentations/inria-paris-saclay_03-19_SaumyaJetley.pptx">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAU team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
 <br/>
 02/19: I will be a visiting researcher at <a href="https://five.ai/">FiveAI</a> starting this month.
 <br/>
-01/19: I submitted my thesis, wohoo! It is titled - 'Use and Examination of CNNs for Scene Understanding'.
+01/19: I submitted my thesis, wohoo! <a href="https://ora.ox.ac.uk/objects/uuid:a5a6dc5e-2864-4276-9186-e77ca6b8d998">'Use and Examination of CNNs for Scene Understanding'</a>.
 <br/>
 12/18: I gave a talk at the newly inaugurated <a href="https://www.wadhwaniai.org/">Wadhwani Institute, Mumbai</a>. 
 Such energy, great leadership, AI for social good in Indian space, ftw!
 </br>
-10/18: Excited to be giving a talk on my research work and academic journey at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.
+10/18: Excited to be giving a talk on my academic journey and work at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>.
 <br/>
 10/18: Grateful to be receiving the WiML travel award, looking forward to the workshop.
 <br/>
 10/18: Grateful to be receiving the NIPS travel award.
-<br/>
-09/18: Our paper explaining adversarial vulnerability in deep neural nets is accepted at NIPS'18. (<a href="https://nips.cc/Conferences/2018/Schedule?showEvent=12016">With friends like these..</a>)
-<br/>
-08/18: I am co-organising the <a href="http://www.deeplearningindaba.com/computer-vision-parallel-track.html">'Frontiers of Computer Vision'</a> track at the <a href="http://www.deeplearningindaba.com/2018.html"> Deep Learning Indaba'18</a>.
-<br/>
-06/18: I will be the <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">outreach officer</a> with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2018-19. Our relationship history <a href="./news/oxwocs.html">here</a>!
-<br/>
-05/18: I am co-organising a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a> at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.
-<br/>
-05/18: I am presenting my work at <a href=https://iclr.cc/Conferences/2018/Schedule?type=Poster>ICLR'18</a>. Some highlights <a href=./news/iclr.html>here</a>.
-<br/>
-04/18: Grateful to be receiving <a href=https://www.stx.ox.ac.uk/about-st-cross>St. Cross</a> travel and research scholarship.
-<br/>
-03/18: Grateful to be receiving the ICLR'18 travel award.
-<br/>
-01/18: Our paper on learning attention in classification CNNs is accepted at ICLR'18. (<a href="https://openreview.net/forum?id=HyzbhfWRW"> Learn to pay attention!</a>)
 <br/>
 </p>
 
@@ -170,6 +164,8 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
           <h2 class="mb-5">Projects</h2>
  
 <ul>
+	<li><div class="mb-3" style="font-size:130%; color:#727b84"><a href='https://www.usine-digitale.fr/article/instantanee-sans-discrimination-qapa-et-dataiku-developpent-la-recherche-d-emploi-du-futur-avec-de-l-ia.N926244'> JobAgile: Transforming the French job market</a></div><il>
+
 	<li><div class="mb-3" style="font-size:130%; color:#727b84"><a href='./projects/Project6-StraightToShapes++.html'>Straight to Shapes++: Real-time Instance Segmentation Made More Accurate</a></div><il>
 	
     <li><div class="mb-3" style="font-size:130%; color:#727b84"><a href='./projects/Project5-WithFriendsLikeThese.html'>With Friends Like These, Who Needs Adversaries?</a></div><il>
@@ -311,7 +307,7 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
           <p class="lead mb-5">
       Long long time ago, I gathered a dataset of 'Country Flags in the Wild'. It comprises of
       12,854 train images and 6,110 test images of the flags of 224 different countries harvested from the world wide web and manually cropped to loosely fit to the inlying flags. More details can be found in this <a href="https://ieeexplore.ieee.org/abstract/document/6707635">paper</a>. 
-      The dataset itself can be downloaded from <a href="/data/tvg/sjetley/">here</a>.
+      To get access to the dataset, please get in touch with me by email. The demo of an android app using an ML model trained on this dataset can found <a href="https://www.youtube.com/watch?v=XLSyaXu7wCg">here</a>.
           </p>
         </div>
       </section>
@@ -323,17 +319,21 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
         <div class="my-auto">
         <h2 class="mb-5">Talks</h2>
         <p class="lead mb-5">
-03/19: I gave a <a href="./presentations/inria-paris-saclay_03-19_SaumyaJetley">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAO team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
+08/19: Visiting speaker at <a href='https://www.isical.ac.in/~ecsu/?q=node/89'>ISI, Kolkata</a> and IIT, Kharagpur.
 <br/>
-12/18: Invited student talk on <i>robustness properties of classification CNNs</i> at <a href="https://www.wadhwaniai.org/">AI Wadhwani Institute, Mumbai</a>. Slide here.
+06/19: Invited talk at <a href = "https://www.di.ens.fr/willow/">Willow team - INRIA-Paris Central</a>.
 <br/>
-10/18: Invited student talk on <i>my research work and academic journey</i> at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.
+03/19: Invited <a href="./presentations/inria-paris-saclay_03-19_SaumyaJetley">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAO team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
 <br/>
-07/17: Invited student talk on <i>real-time instance segmentation</i> at the Cambridge office of <a href="https://five.ai/">FiveAI</a>. Slides <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing">here</a>, Demo <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">here</a>.
+12/18: Invited talk on <i>robustness properties of classification CNNs</i> at <a href="https://www.wadhwaniai.org/">AI Wadhwani Institute, Mumbai</a>. Slide here.
 <br/>
-06/17: Gave a <i>demo of our instance segmentation technology</i> at the <a href="http://www.spacestudios.org.uk/art-technology/reconfigured-vision-workshop/">Reconfigured Vision Workshop</a> in London.
+10/18: Invited talk on <i>my research work and academic journey</i> at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.
 <br/>
-03/17: Invited student talk on <i>real-time instance segmentation</i> at the <a href="http://workshops.inf.ed.ac.uk/deep/deep2017/">Deep Learning Workshop'17</a> in Edinburgh. <a href="https://www.youtube.com/watch?v=sTCY4JWPI4I">Recording</a>, <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing"> slides</a>, and <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">demo</a>.
+07/17: Invited talk on <i>real-time instance segmentation</i> at the Cambridge office of <a href="https://five.ai/">FiveAI</a>. Slides <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing">here</a>, Demo <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">here</a>.
+<br/>
+06/17: Demo'ed of our <i>instance segmentation algorithm</i> at the <a href="http://www.spacestudios.org.uk/art-technology/reconfigured-vision-workshop/">Reconfigured Vision Workshop</a> in London.
+<br/>
+03/17: Invited talk on <i>real-time instance segmentation</i> at the <a href="http://workshops.inf.ed.ac.uk/deep/deep2017/">Deep Learning Workshop'17</a> in Edinburgh. <a href="https://www.youtube.com/watch?v=sTCY4JWPI4I">Recording</a>, <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing"> slides</a>, and <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">demo</a>.
 <br/>
 
     </p>
@@ -347,24 +347,28 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="teaching">
         <div class="my-auto">
           <h2 class="mb-5">Teaching</h2>
+    <p class="lead mb-5">I like teaching and have tutored for the following courses at the department of Engineering Science during my PhD:
+        <br/>
+		- Attention in AI (Special exchange programme, Designed and conducted the 10-hour course alongside <a href="https://scholar.google.com/citations?user=WKmXsyEAAAAJ&hl=en">Nick Lord</a>, Michaelmas'18)
+		<br/>
+		- B14 course on Image Analysis (Preparatory course, Trinity'17)
+		<br/>
+		- <a href="http://www.robots.ox.ac.uk/~sjrob/Teaching/B14_SP/b14_sp_lect1.pdf">B14 course on Signal Analysis (Hilary'17)</a>
+		<br/>
+		- <a href="http://www.robots.ox.ac.uk/~az/lectures/ia/index.html">B14 course on Image Analysis (Michaelmas'16)</a>
+		<br/>
+		- <a href="http://www.robots.ox.ac.uk/~fwood/teaching/B16_hilary_2013_2014/index.html">B16 course on Operating Systems (Hilary'16)</a>
+		<br/>		
+		
 
-        <p class="lead mb-5">I like teaching and have tutored for the following courses at the department of Engineering Science during my PhD tenure:
-        <br/><br/>
-<a href="http://www.robots.ox.ac.uk/~fwood/teaching/B16_hilary_2013_2014/index.html">B16 course on Operating Systems (Hilary'16)</a>
-<br/>
-<a href="http://www.robots.ox.ac.uk/~az/lectures/ia/index.html">B14 course on Image Analysis (Michaelmas'16)</a>
-<br/>
-<a href="http://www.robots.ox.ac.uk/~sjrob/Teaching/B14_SP/b14_sp_lect1.pdf">B14 course on Signal Analysis (Hilary'17)</a>
-<br/>
-B14 course on Image Analysis (Exam Preparatory course, Trinity'17)
-<br/>
-
-        <p class="lead mb-5">I have also been a laboratory demonstrator for the below:
-        <br/><br/>
-<a href="http://www.eng.ox.ac.uk/~labejp/Courses/1P5/">P5 Matlab software programming course (Michaelmas'16, Hilary'17, Trinity'17)</a>
-<br/>
-B14 Lab course on Image Analysis (Hilary'17)
-</p>
+        <p class="lead mb-5">I have also been a laboratory demonstrator for the courses below:
+        <br/>
+		- B14 Lab course on Image Analysis (Hilary'17)
+		<br/>
+		- <a href="http://www.eng.ox.ac.uk/~labejp/Courses/1P5/">P5 Matlab software programming course (Michaelmas'16, Hilary'17, Trinity'17)</a>
+		<br/>
+		
+	</p>
       </section>
 
 
@@ -375,11 +379,15 @@ B14 Lab course on Image Analysis (Hilary'17)
         <div class="my-auto">
         <h2 class="mb-5">Reviewer duties</h2>
         <p class="lead mb-5">
-10/18: I am reviewing for ICLR'19.
-<br/>
-08/18: I co-organised the <a href="http://www.deeplearningindaba.com/computer-vision-parallel-track.html">'Frontiers of Computer Vision'</a> track at the <a href="http://www.deeplearningindaba.com/2018.html"> Deep Learning Indaba'18</a>.
-<br/>
-07/18: I reviewed for NeurIPS'18.
+		<br/>
+		- I will be on the program committee for IJCAI'21.
+		<br/>
+		- I have served as a reviewer for NeurIPS'18, ECCV'20, NeurIPS'20.
+		<br/>
+		- I served on the program committee of CVPR 2020 Workshop on <a href="https://adv-workshop-2020.github.io/">Adversarial Machine Learning in Computer Vision.</a>
+		<br/>
+		- I co-organised the Frontiers of Computer Vision track at the <a href="https://deeplearningindaba.com/2018/indaba/programme/"> Deep Learning Indaba'18</a>.
+		<br/>
 </p>
     </section>
 
@@ -389,8 +397,11 @@ B14 Lab course on Image Analysis (Hilary'17)
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="outreach">
         <div class="my-auto">
         <h2 class="mb-5">Outreach</h2>
+		<p class="lead mb-5"> 
+		As a member of several initiatives to encourage STEM education, I have frequently conducted coding sessions and educational talks for school students at Science festivals and organised learning events for families and adults in Science museums. Over the years, I have enjoyed pursuing scientific ideas for impact design and value discovery for different communities and continue to do so.
+		</p>
         <p class="lead mb-5">
-09/18: I presented my work on realtime instance segmentation at the <a href="http://www.cs.ox.ac.uk/">CS dept.</a> open-day to interested students and parents. 
+09/18: I presented my work on realtime instance segmentation at the <a href="http://www.cs.ox.ac.uk/">CS dept.</a> open-day to prospective students and their parents. 
 <br/>
 06/18: I will be the <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">Outreach & Scholarship officer</a> for <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2018-19.
 <br/>
@@ -414,7 +425,9 @@ B14 Lab course on Image Analysis (Hilary'17)
         <div class="my-auto">
         <h2 class="mb-5">Awards</h2>
         <p class="lead mb-5">
-2017: <a href="https://www.pmb.ox.ac.uk/news/pembroke-team-win-tri-innovate-2017-innovative-audio-navigation-concept">Winner of the Tri-innovate challenge</a> - Oxford university annual innovation challenge for students.
+2019: <a href="https://eng.ox.ac.uk/news/postgraduate-scholarship-will-help-ai-researcher-publicise-her-work/">Winner of the IET Postgraduate research award</a>.
+<br/>
+2017: <a href="https://www.pmb.ox.ac.uk/news/pembroke-team-win-tri-innovate-2017-innovative-audio-navigation-concept">Winner of the Tri-innovate challenge</a> - Oxford university business innovation challenge.
 <br/>
 2016: Amongst the <a href="https://warwick.ac.uk/fac/sci/dcs/research/tia/her2contest/outcome">top-10 algorithms for breast cancer prognosis challenge</a> (lookout for Team HERcules).
 <br/>
