links to the talks

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <br/>	
 04/19: I successfully defended my thesis to an examining panel of <a href="https://en.wikipedia.org/wiki/Andrew_Zisserman">Prof. Andrew Zisserman</a> and <a href="https://homes.esat.kuleuven.be/~tuytelaa/">Prof. Tinne Tuytelaars</a>.	
 <br/>
-03/19: I was invited for a <a href="./presentations/inria-paris-saclay_03-19_SaumyaJetley.pptx">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAU team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
+03/19: I was invited for a talk at the <a href="https://tao.lri.fr/tiki-index.php">TAU team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
 <br/>
 02/19: I will be a visiting researcher at <a href="https://five.ai/">FiveAI</a> starting this month.
 <br/>
@@ -323,11 +323,11 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
 <br/>
 06/19: Invited talk at <a href = "https://www.di.ens.fr/willow/">Willow team - INRIA-Paris Central</a>.
 <br/>
-03/19: Invited <a href="./presentations/inria-paris-saclay_03-19_SaumyaJetley">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAO team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
+03/19: Invited <a href="https://github.com/saumya-jetley/saumya-jetley.github.io/blob/master/presentations/inria-paris-saclay_03-19_SaumyaJetley.pptx">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAO team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
 <br/>
 12/18: Invited talk on <i>robustness properties of classification CNNs</i> at <a href="https://www.wadhwaniai.org/">AI Wadhwani Institute, Mumbai</a>. Slide here.
 <br/>
-10/18: Invited talk on <i>my research work and academic journey</i> at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.
+10/18: Invited talk on <i>my research work and academic journey</i> at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>.
 <br/>
 07/17: Invited talk on <i>real-time instance segmentation</i> at the Cambridge office of <a href="https://five.ai/">FiveAI</a>. Slides <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing">here</a>, Demo <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">here</a>.
 <br/>
