--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
           <p class="lead mb-5">
       Long long time ago, I gathered a dataset of 'Country Flags in the Wild'. It comprises of
       12,854 train images and 6,110 test images of the flags of 224 different countries harvested from the world wide web and manually cropped to loosely fit to the inlying flags. More details can be found in this <a href="https://ieeexplore.ieee.org/abstract/document/6707635">paper</a>. 
-      To get access to the dataset, please get in touch with me by email. The demo of an android app using an ML model trained on this dataset can found <a href="https://www.youtube.com/watch?v=XLSyaXu7wCg">here</a>.
+      To get access to the dataset, please get in touch with me by email. The demo of our android app using an ML model trained on this dataset can found <a href="https://www.youtube.com/watch?v=XLSyaXu7wCg">here</a>.
           </p>
         </div>
       </section>
