--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
 <br/>
 07/17: Invited talk on <i>real-time instance segmentation</i> at the Cambridge office of <a href="https://five.ai/">FiveAI</a>. Slides <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing">here</a>, Demo <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">here</a>.
 <br/>
-06/17: Demo'ed of our <i>instance segmentation algorithm</i> at the <a href="http://www.spacestudios.org.uk/art-technology/reconfigured-vision-workshop/">Reconfigured Vision Workshop</a> in London.
+06/17: Demo'ed our <i>instance segmentation algorithm</i> at the <a href="http://www.spacestudios.org.uk/art-technology/reconfigured-vision-workshop/">Reconfigured Vision Workshop</a> in London.
 <br/>
 03/17: Invited talk on <i>real-time instance segmentation</i> at the <a href="http://workshops.inf.ed.ac.uk/deep/deep2017/">Deep Learning Workshop'17</a> in Edinburgh. <a href="https://www.youtube.com/watch?v=sTCY4JWPI4I">Recording</a>, <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing"> slides</a>, and <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">demo</a>.
 <br/>
