--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 08/19: I have spent this summer visiting <a href='https://www.isical.ac.in/~ecsu/?q=node/89'>ISI, Kolkata</a> and IIT, Kharagpur as an invited guest.
 <br/>
 
-06/19: I gave an invited talk at Willow team - INRIA-Paris Central.
+06/19: I gave an invited talk at the Willow team - INRIA-Paris Central.
 <br/>	
 04/19: I successfully defended my thesis to an examining panel of <a href="https://en.wikipedia.org/wiki/Andrew_Zisserman">Prof. Andrew Zisserman</a> and <a href="https://homes.esat.kuleuven.be/~tuytelaa/">Prof. Tinne Tuytelaars</a>.	
 <br/>
@@ -305,7 +305,7 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
         <div class="my-auto">
           <h2 class="mb-5">Datasets</h2>
           <p class="lead mb-5">
-      Long long time ago, I gathered a dataset of 'Country Flags in the Wild'. It comprises of
+      Long long time ago, I gathered a dataset of 'Country Flags in the Wild'. It contains
       12,854 train images and 6,110 test images of the flags of 224 different countries harvested from the world wide web and manually cropped to loosely fit to the inlying flags. More details can be found in this <a href="https://ieeexplore.ieee.org/abstract/document/6707635">paper</a>. 
       To get access to the dataset, please get in touch with me by email. The demo of our android app using an ML model trained on this dataset can found <a href="https://www.youtube.com/watch?v=XLSyaXu7wCg">here</a>.
           </p>
