--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
 <br/>
 06/19: Invited talk at <a href = "https://www.di.ens.fr/willow/">Willow team - INRIA-Paris Central</a>.
 <br/>
-03/19: Invited <a href="https://github.com/saumya-jetley/saumya-jetley.github.io/blob/master/presentations/inria-paris-saclay_03-19_SaumyaJetley.pptx">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAO team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
+03/19: Invited <a href="https://github.com/saumya-jetley/saumya-jetley.github.io/blob/master/presentations/inria-paris-saclay_03-19_SaumyaJetley.pptx">talk</a> at <a href="https://tao.lri.fr/tiki-index.php">TAU team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
 <br/>
 12/18: Invited talk on <i>robustness properties of classification CNNs</i> at <a href="https://www.wadhwaniai.org/">AI Wadhwani Institute, Mumbai</a>. Slide here.
 <br/>
