--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
           <h2 class="mb-5">Teaching</h2>
     <p class="lead mb-5">I like teaching and have tutored for the following courses at the department of Engineering Science during my PhD:
         <br/>
-		- Attention in AI (Special exchange programme, Designed and conducted the 10-hour course alongside <a href="https://scholar.google.com/citations?user=WKmXsyEAAAAJ&hl=en">Nick Lord</a>, Michaelmas'18)
+		- Attention in AI (Special exchange programme, Designed and taught the 10-hour course alongside <a href="https://scholar.google.com/citations?user=WKmXsyEAAAAJ&hl=en">Nick Lord</a>, Michaelmas'18)
 		<br/>
 		- B14 course on Image Analysis (Preparatory course, Trinity'17)
 		<br/>
@@ -386,7 +386,7 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
 		<br/>
 		- I served on the program committee of CVPR 2020 Workshop on <a href="https://adv-workshop-2020.github.io/">Adversarial Machine Learning in Computer Vision.</a>
 		<br/>
-		- I co-organised the Frontiers of Computer Vision track at the <a href="https://deeplearningindaba.com/2018/indaba/programme/"> Deep Learning Indaba'18</a>.
+		- I co-organised the Frontiers of Computer Vision workshop at the <a href="https://deeplearningindaba.com/2018/indaba/programme/"> Deep Learning Indaba'18</a>.
 		<br/>
 </p>
     </section>
