--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
         <div class="my-auto">
         <h2 class="mb-5">Outreach</h2>
 		<p class="lead mb-5"> 
-		As a member of several initiatives to encourage STEM education, I have frequently conducted coding sessions and educational talks for school students at Science festivals and organised learning events for families and adults in Science museums. Over the years, I have enjoyed pursuing scientific ideas for impact design and value discovery for different communities and continue to do so.
+		As a member of several initiatives to encourage STEM education, I have frequently conducted coding sessions and educational talks for school students at science festivals and organised learning events for families and adults in science museums. Over the years, I have enjoyed pursuing scientific ideas for impact design and value discovery for different communities, and continue to do so.
 		</p>
         <p class="lead mb-5">
 09/18: I presented my work on realtime instance segmentation at the <a href="http://www.cs.ox.ac.uk/">CS dept.</a> open-day to prospective students and their parents. 
