--- a/index.html
+++ b/index.html
@@ -323,9 +323,11 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
 <br/>
 06/19: Invited talk at <a href = "https://www.di.ens.fr/willow/">Willow team - INRIA-Paris Central</a>.
 <br/>
+03/19: Presentation to the IET awards panel. <a href="https://drive.google.com/file/d/1T2clQ3-NG4Zk0bZ2338he5q2Q8WmNxvG/view?usp=sharing">Slides.</a> and accompanying <a href="https://drive.google.com/file/d/1cvZpLR88qE8qMyt11xoeLUaJDRk4FfzI/view?usp=sharing">video</a>.
+<br/>
 03/19: Invited <a href="https://github.com/saumya-jetley/saumya-jetley.github.io/blob/master/presentations/inria-paris-saclay_03-19_SaumyaJetley.pptx">talk</a> at <a href="https://tao.lri.fr/tiki-index.php">TAU team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
 <br/>
-12/18: Invited talk on <i>robustness properties of classification CNNs</i> at <a href="https://www.wadhwaniai.org/">AI Wadhwani Institute, Mumbai</a>.<a href="https://drive.google.com/drive/folders/1MINaE-ucHX6pF1alf0ZeuY9pww9ZNwYr">Slides here</a>.
+12/18: Invited talk on <i>robustness properties of classification CNNs</i> at <a href="https://www.wadhwaniai.org/">AI Wadhwani Institute, Mumbai</a>. <a href="https://drive.google.com/file/d/12jcLaVGF5Yey3b43RsLO5VgCiqn0OxSq/view?usp=sharing">Slides here</a>.
 <br/>
 10/18: Invited talk on <i>my research work and academic journey</i> at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>.
 <br/>
