--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
           <h2 class="mb-5">News</h2>
           <p class="lead mb-5">
 
+10/21: I have joined <a href="https://plaksha.edu.in/faculty-details/dr-saumya-jetley"> </a>Plaksha University</a> as a founding faculty in CSAI.
 10/19: I am joining <a href="https://tao.lri.fr/tiki-index.php"> TAU Team</a> as a postdoc on causal learning and inference. 
 <a href="http://bayes.cs.ucla.edu/WHY/">*Book of Why*</a> has opened new doorways!
 <br/>
