--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:name@email.com">saumya.jetley@inria.fr</a>
           </div>
           <p class="lead mb-5">
+	I am an Assistant Professor at <a href="https://plaksha.edu.in/faculty-details/dr-saumya-jetley">Plaksha University<a/> and the Associate Director of Academics for their Technology Leaders Program.
+
+		  <br/><br/>
             I am a postdoc with Michele Sebag at the <a href="https://tao.lri.fr/tiki-index.php">TAU Team, INRIA-Paris Saclay</a>. I work on causal inference in the context of French job market, alongside the industrial partner <a href="https://www.qapa.fr/">QAPA</a>, and on privacy-preserving predictive analysis for French covid data. I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a> at Oxford University.
-			
+  
 			<br/><br/>
 			My research work has been variously funded by the Government of India, European research council, US department of defense and Five AI (autonomous driving startup). I am an IET Postgraduate Research award holder for 2019, have <a href=https://scholar.google.com/citations?user=jdWaKDIAAAAJ&hl=en style="text-decoration:none">published several papers in top-tier CV and ML conferences</a>, was selected for the FDL NASA programme 2019, and was an invited panel member at FDL Europe Big Think 2020. I have presented my research at various international conferences (NeurIPS, CVPR, ICLR) and workshops (Women in Machine Learning, Deep Learning Edinburgh, <a href="https://spacestudios.org.uk/art-technology/reconfigured-vision-workshop/">Reconfigured Vision</a>), and am grateful to have been an invited speaker at institutes such as AI Wadhwani, ISI Kolkata, IIT Kharagpur, INRIA Paris Central, INRIA Paris Saclay. 
 			
@@ -123,6 +126,7 @@
           <p class="lead mb-5">
 
 10/21: I have joined <a href="https://plaksha.edu.in/faculty-details/dr-saumya-jetley"> </a>Plaksha University</a> as a founding faculty in CSAI.
+<br/>
 10/19: I am joining <a href="https://tao.lri.fr/tiki-index.php"> TAU Team</a> as a postdoc on causal learning and inference. 
 <a href="http://bayes.cs.ucla.edu/WHY/">*Book of Why*</a> has opened new doorways!
 <br/>
