--- a/index.html
+++ b/index.html
@@ -85,15 +85,17 @@
         <div class="my-auto">
           <h1 class="mb-0">Saumya
             <span class="text-primary">Jetley</span>
+		  <h3> Consultant | Mentor | Educator</h3>
           </h1>
-          <div class="lead mb-5">TAU Team, INRIA-Paris Saclay
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:name@email.com">saumya.jetley@inria.fr</a>
-          </div>
           <p class="lead mb-5">
-	I am an Assistant Professor at <a href="https://plaksha.edu.in/faculty-details/dr-saumya-jetley">Plaksha University<a/> and the Associate Director of Academics for their Technology Leaders Program.
+	I was an Assistant Professor at <a href="https://plaksha.edu.in/faculty-details/dr-saumya-jetley">Plaksha University<a/> and the Associate Director of Academics for their Technology Leaders Program from 2021-2023.
 
 		  <br/><br/>
-            I am a postdoc with Michele Sebag at the <a href="https://tao.lri.fr/tiki-index.php">TAU Team, INRIA-Paris Saclay</a>. I work on causal inference in the context of French job market, alongside the industrial partner <a href="https://www.qapa.fr/">QAPA</a>, and on privacy-preserving predictive analysis for French covid data. I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a> at Oxford University.
+            I was a postdoctoral research fellow with Michele Sebag at the <a href="https://tao.lri.fr/tiki-index.php">TAU Team, INRIA-Paris Saclay</a>. I work on causal inference in the context of French job market, alongside the industrial partner <a href="https://www.qapa.fr/">QAPA</a>, and on privacy-preserving predictive analysis for French covid data between 2019-2021. 
+		  
+		<br/><br/>
+		
+		I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a> at Oxford University between 2014-2019.
   
 			<br/><br/>
 			My research work has been variously funded by the Government of India, European research council, US department of defense and Five AI (autonomous driving startup). I am an IET Postgraduate Research award holder for 2019, have <a href=https://scholar.google.com/citations?user=jdWaKDIAAAAJ&hl=en style="text-decoration:none">published several papers in top-tier CV and ML conferences</a>, was selected for the FDL NASA programme 2019, and was an invited panel member at FDL Europe Big Think 2020. I have presented my research at various international conferences (NeurIPS, CVPR, ICLR) and workshops (Women in Machine Learning, Deep Learning Edinburgh, <a href="https://spacestudios.org.uk/art-technology/reconfigured-vision-workshop/">Reconfigured Vision</a>), and am grateful to have been an invited speaker at institutes such as AI Wadhwani, ISI Kolkata, IIT Kharagpur, INRIA Paris Central, INRIA Paris Saclay. 
