--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
         <div class="my-auto">
           <h1 class="mb-0">Saumya
             <span class="text-primary">Jetley</span>
-		  <h3> Consultant | Mentor | Educator</h3>
+		  <h4> Educator | Mentor | Consultant </h4>
           </h1>
           <p class="lead mb-5">
+	<b>Past</b>
+	<br/><br/>
 	I was an Assistant Professor at <a href="https://plaksha.edu.in/faculty-details/dr-saumya-jetley">Plaksha University<a/> and the Associate Director of Academics for their Technology Leaders Program from 2021-2023.
 
 		  <br/><br/>
